--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <header class="menu-setas">
         <a href="#" class="seta esquerda">⬅️</a>
         <h1>CARA 👑 OU 😃 COROA</h1>
-        <a href="#" class="seta direita">➡️</a>
+        <a href="/somadosdados.html" class="seta direita">➡️</a>
       </header>
   <section>
     <div class="jogo">
