--- a/Projeto_Web_Central_De_Jogos-main/caraoucoroa/caraoucoroa.html
+++ b/Projeto_Web_Central_De_Jogos-main/caraoucoroa/caraoucoroa.html
@@ -1,42 +1,47 @@
 <!DOCTYPE html>
 <html lang="pt-BR">
 <head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <title>Cara ou Coroa</title>
-  <link rel="stylesheet" href="/style.css" />
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Jogo 21</title>
+  <link rel="stylesheet" href="/style.css">
 </head>
 <body>
-    <header class="menu-setas">
-        <a href="/jogodavelha/jogodavelha.html" class="seta esquerda">⬅️</a>
-        <h1>CARA 👑 OU 😃 COROA</h1>
-        <a href="/pedrapapeltesousapve/pptpve.html" class="seta direita">➡️</a>
-      </header>
-  <section>
-    <div class="jogo">
-      <form id="form-caraoucoroa">
-        <label>
-          <input type="radio" name="caraoucoroa" value="cara" />
-          😃 CARA
-        </label>
-        <label>
-          <input type="radio" name="caraoucoroa" value="coroa" />
-          👑 COROA
-        </label>
-      </form>
 
-      <button onclick="jogar()">🎲 JOGAR</button>
-    </div>
+<header class="menu-setas">
+  <a href="centraldosjogos.html" class="seta esquerda">⬅️</a>
+  <h1>🃏 Jogo 21</h1>
+</header>
 
-    <div id="res" class="resultado"></div>
-  </section>
+<section>
+  <div>
+    <label for="numJogadores">Número de Jogadores:</label>
+    <select id="numJogadores">
+      <option value="2">2</option>
+      <option value="3">3</option>
+      <option value="4">4</option>
+    </select>
+    <button onclick="iniciarJogo()">Iniciar Jogo</button>
+  </div>
 
-  <footer>
-    <p>💡 Quer saber mais sobre esse jogo?</p>
-    <p><a href="/caraoucoroa/regrascc.html">Clique aqui para ver as regras!</a></p>
-    <p><a href="/centraldosjogos.html">Voltar para tela inicial</a></p>
-  </footer>
+  <div id="jogo" style="display:none;">
+    <h2 id="vezJogador"></h2>
+    <p>Pontuação atual: <span id="pontuacaoAtual">0</span></p>
+    <button onclick="comprarCarta()">🃏 Comprar Carta</button>
+    <button onclick="parar()">✋ Parar</button>
+  </div>
 
-  <script src="/caraoucoroa/caraoucoroa.js"></script>
+  <div id="resultado"></div>
+</section>
+
+<footer>
+  <div class="desenvolvedores">
+    <h3>👨‍💻 Desenvolvedores:</h3>
+    <p>Samuel Alexandre de Sousa Barbosa</p>
+  </div>
+</footer>
+
+<script src="/caraoucoroa/caraoucoroa.js"></script>
+
 </body>
 </html>
