--- a/Projeto_Web_Central_De_Jogos-main/centraldosjogos.html
+++ b/Projeto_Web_Central_De_Jogos-main/centraldosjogos.html
@@ -16,7 +16,7 @@
     <h2>Escolha um jogo:</h2>
     <div class="jogos-grid">
         <a href="/caraoucoroa/caraoucoroa.html" class="jogo-card">
-            <img src="/IMGS/caraoucoroa.png" alt="Cara ou Coroa">
+            <img src="/IMGS/jogo21.png" alt="Cara ou Coroa">
             <span>Cara ou Coroa</span>
         </a>
 
